unpackaged/main/default/objects/Request_Forms__c/fields/Tactics_Assistance_Requested__c.field-meta.xml
<CustomField>
    <fullName>Tactics_Assistance_Requested__c</fullName>
    <inlineHelpText>Please choose all of the tactics / assistance for this project. Thank You.</inlineHelpText>
    <label>Tactics / Assistance Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BEEP Campaign</fullName>
            </value>
            <value>
                <fullName>Blog Post</fullName>
            </value>
            <value>
                <fullName>Booklets</fullName>
            </value>
            <value>
                <fullName>Call Out / Prospecting List</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Flyer / Brochure</fullName>
            </value>
            <value>
                <fullName>Invitation</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Logo</fullName>
            </value>
            <value>
                <fullName>Meeting Pack Print Materials</fullName>
            </value>
            <value>
                <fullName>Online Banner Ad</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Photography &amp; Editing</fullName>
            </value>
            <value>
                <fullName>Poster</fullName>
            </value>
            <value>
                <fullName>PowerPoint Presentation</fullName>
            </value>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Print Ad</fullName>
            </value>
            <value>
                <fullName>Promotional Item/Giveaway</fullName>
            </value>
            <value>
                <fullName>Social Media Post</fullName>
            </value>
            <value>
                <fullName>Trade Show Exhibit</fullName>
            </value>
            <value>
                <fullName>Video &amp; Editing</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Web Updates</fullName>
            </value>
            <value>
                <fullName>Writing Assistance for Letter/Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>