unpackaged/main/default/objects/Request_Forms__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <inlineHelpText>Please describe the prospect / client that you would like to receive the communication. Thank You.</inlineHelpText>
    <label>Target Audience</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>