unpackaged/main/default/objects/Request_Forms__c/fields/Time_Off_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_Off_Request_Status__c</fullName>
    <label>Time Off Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>