unpackaged/main/default/objects/Request_Forms__c/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Today&#39;s Date</label>
    <type>Date</type>
</CustomField>