unpackaged/main/default/objects/Request_Forms__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>NCM_Institute__c +  Retail_Solutions__c +  Software_Solutions__c +  Travel_Solutions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>