unpackaged/main/default/objects/Request_Forms__c/fields/Total_Approved_Projects__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Projects__c</fullName>
    <description>Total summary of projects approved by business (excludes marketing)</description>
    <label>Total Approved Projects</label>
    <summaryFilterItems>
        <field>Marketing_Project__c.Business_Approver__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>Marketing_Project__c.Marketing_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>