unpackaged/main/default/objects/Request_Forms__c/fields/Total_Projects_in_Request__c.field-meta.xml
<CustomField>
    <fullName>Total_Projects_in_Request__c</fullName>
    <label>Total Projects in Request</label>
    <summaryForeignKey>Marketing_Project__c.Marketing_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>