unpackaged/main/default/objects/Request_Forms__c/fields/Training_Description__c.field-meta.xml
<CustomField>
    <fullName>Training_Description__c</fullName>
    <inlineHelpText>Please describe the specific requirements and outcomes you&#39;d like to achieve with training.</inlineHelpText>
    <label>Training Requirements/Outcomes</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>