unpackaged/main/default/objects/Request_Forms__c/fields/Travel_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Travel_Solutions__c</fullName>
    <label>% Travel Solutions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>