unpackaged/main/default/objects/Request_Forms__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <inlineHelpText>Marketing Assistance - ex: PowerPoint, Flyer, Email / Letter Writing
New Campaign - ex: New 20 Group, axcessa sales, NCMi class promotion</inlineHelpText>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event / Tradeshow</fullName>
            </value>
            <value>
                <fullName>Marketing Assistance</fullName>
            </value>
            <value>
                <fullName>New Campaign</fullName>
            </value>
            <value>
                <fullName>Printing Request</fullName>
            </value>
            <value>
                <fullName>Sales Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>