unpackaged/main/default/objects/Request_Forms__c/fields/Type_of_Time_Off_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Time_Off_Request__c</fullName>
    <label>Type of Time Off Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Paid Personal Leave</fullName>
            </value>
            <value>
                <fullName>Unpaid Personal Leave</fullName>
            </value>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>Jury Duty</fullName>
            </value>
            <value>
                <fullName>Business (please specify below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>