unpackaged/main/default/objects/Request_Forms__c/fields/Unapproved_Projects__c.field-meta.xml
<CustomField>
    <fullName>Unapproved_Projects__c</fullName>
    <formula>Total_Projects_in_Request__c -  Total_Approved_Projects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unapproved Projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>