unpackaged/main/default/objects/Request_Forms__c/fields/What_else_do_we_need_to_know__c.field-meta.xml
<CustomField>
    <fullName>What_else_do_we_need_to_know__c</fullName>
    <inlineHelpText>What specific client direction or relevant information is needed to complete the project?</inlineHelpText>
    <label>What else do we need to know?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>