unpackaged/main/default/objects/Request_Forms__c/fields/What_is_the_call_to_action__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_call_to_action__c</fullName>
    <label>What is the call to action?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>