unpackaged/main/default/objects/Request_Forms__c/fields/What_needs_to_be_done_and_why__c.field-meta.xml
<CustomField>
    <fullName>What_needs_to_be_done_and_why__c</fullName>
    <inlineHelpText>What are we creating? What’s the down-and-dirty background?</inlineHelpText>
    <label>What needs to be done and why?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>