unpackaged/main/default/objects/Request_Forms__c/fields/Whom_are_we_talking_to__c.field-meta.xml
<CustomField>
    <fullName>Whom_are_we_talking_to__c</fullName>
    <inlineHelpText>A quick summation of the audience, i.e., ‘trade show attendees.’</inlineHelpText>
    <label>Whom are we talking to?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>