unpackaged/main/default/objects/Request_Forms__c/fields/X20_Group_New_or_Backfill__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_New_or_Backfill__c</fullName>
    <label>20 Group - New or Backfill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backfill</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>