unpackaged/main/default/objects/Request_Forms__c/fields/X20_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Type__c</fullName>
    <inlineHelpText>Franchise, Independent, BHPH, etc.</inlineHelpText>
    <label>20 Group Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>