unpackaged/main/default/objects/Request_Forms__c/fields/X20_Groups_Only__c.field-meta.xml
<CustomField>
    <fullName>X20_Groups_Only__c</fullName>
    <inlineHelpText>Please enter whether this is a New or Backfill Group, Group Name, and Group #:</inlineHelpText>
    <label>20 Groups Only</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>