unpackaged/main/default/objects/Request_Forms__c/recordTypes/General_Marketing_Request.recordType-meta.xml
<RecordType>
    <fullName>General_Marketing_Request</fullName>
    <active>true</active>
    <description>General marketing request that includes more than one Core Business</description>
    <label>General Marketing Request</label>
</RecordType>