unpackaged/main/default/objects/Request_Forms__c/recordTypes/Marketing_Request_Form.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Request_Form</fullName>
    <active>true</active>
    <description>Please complete for all Marketing Requests (Marketing Assistance, New Campaign, Printing, Event/Tradeshow, etc.)</description>
    <label>Marketing Request</label>
</RecordType>