unpackaged/main/default/objects/Request_Forms__c/recordTypes/NCM_Content_Request.recordType-meta.xml
<RecordType>
    <fullName>NCM_Content_Request</fullName>
    <active>true</active>
    <description>Use this to request new or updates/edits to existing content used for engagements,classes etc</description>
    <label>NCM Content Request</label>
</RecordType>