unpackaged/main/default/objects/Request_Forms__c/recordTypes/New_Marketing_Year.recordType-meta.xml
<RecordType>
    <fullName>New_Marketing_Year</fullName>
    <active>true</active>
    <description>Internal request to create a new marketing year</description>
    <label>New Marketing Year</label>
</RecordType>