unpackaged/main/default/objects/Request_Forms__c/recordTypes/RFP_Request.recordType-meta.xml
<RecordType>
    <fullName>RFP_Request</fullName>
    <active>true</active>
    <description>Use this record type to request a RFP (request for Proposal)</description>
    <label>RFP Request</label>
</RecordType>