unpackaged/main/default/objects/Request_Forms__c/recordTypes/Tradeshow_Request.recordType-meta.xml
<RecordType>
    <fullName>Tradeshow_Request</fullName>
    <active>true</active>
    <description>Create a Marketing Request for Tradeshows</description>
    <label>Tradeshow Request</label>
</RecordType>