unpackaged/main/default/objects/Request_Forms__c/validationRules/Printing_Quantity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Printing_Quantity_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Type_of_Request__c, &quot;Printing Request&quot;),
ISBLANK(TEXT(Printing_Request_Quantity__c)
))</errorConditionFormula>
    <errorDisplayField>Printing_Request_Quantity__c</errorDisplayField>
    <errorMessage>Please enter a printing quantity. Thank you.</errorMessage>
</ValidationRule>