unpackaged/main/default/objects/Request_Forms__c/validationRules/X20_Group_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>X20_Group_Number_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Project_to_Support__c ,  &quot;20 Groups&quot;),
ISPICKVAL (X20_Group_New_or_Backfill__c, &quot;Backfill&quot;),
ISBLANK (Group_Id__c ))</errorConditionFormula>
    <errorDisplayField>X20_Group_Number__c</errorDisplayField>
    <errorMessage>Please enter the Backfill 20 Group Number. Thank You.</errorMessage>
</ValidationRule>