unpackaged/main/default/objects/Request_Forms__c/validationRules/X20_Groups_Only_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>X20_Groups_Only_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Project_to_Support__c ,  &quot;20 Groups&quot;),
ISPICKVAL (X20_Group_New_or_Backfill__c, &quot;&quot;),
ISBLANK (X20_Group_Type__c)
)</errorConditionFormula>
    <errorDisplayField>X20_Group_New_or_Backfill__c</errorDisplayField>
    <errorMessage>Please select whether this is a New or Backfill Group and enter the Group Type. Thank You.</errorMessage>
</ValidationRule>