unpackaged/main/default/objects/Request_Forms__c/listViews/All_Requests.listView-meta.xml
<ListView>
    <fullName>All_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Request_Name__c</columns>
    <columns>NCM_Services_Supported__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Total_Projects_in_Request__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Name__c</field>
        <operation>notContain</operation>
        <value>RFP -</value>
    </filters>
    <label>All Requests</label>
</ListView>