unpackaged/main/default/objects/Request_Forms__c/listViews/NCMi_Requests.listView-meta.xml
<ListView>
    <fullName>NCMi_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Request_Name__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Requested_Completion_Launch_Date__c</columns>
    <columns>Requestor_Forms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Institute</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>MR-</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Rejected</value>
    </filters>
    <label>NCM Institute</label>
</ListView>