unpackaged/main/default/objects/Request_Forms__c/listViews/Pending_Active_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_Active_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Request_Name__c</columns>
    <columns>NCM_Services_Supported__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Total_Projects_in_Request__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Name__c</field>
        <operation>notContain</operation>
        <value>RFP -</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <label>Open Marketing Requests</label>
</ListView>