unpackaged/main/default/objects/Request_Forms__c/listViews/Software_Solutions_Requests.listView-meta.xml
<ListView>
    <fullName>Software_Solutions_Requests</fullName>
    <columns>Requestor_Forms__c</columns>
    <columns>Request_Name__c</columns>
    <columns>NAME</columns>
    <columns>Request_Status__c</columns>
    <columns>Requested_Completion_Launch_Date__c</columns>
    <columns>Total_Projects_in_Request__c</columns>
    <columns>Total_Approved_Projects__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>axcessa,Software Solutions</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>MR-</value>
    </filters>
    <filters>
        <field>Marketing_Year__c</field>
        <operation>equals</operation>
        <value>2018,2019</value>
    </filters>
    <label>Software Solutions</label>
</ListView>